# nornir_dsl

./: README.rst  pyproject.toml  setup.cfg
nornir_dsl/: cli.py  inventory.py  runner.py
nornir_dsl/modules/: __init__.py  template.py  test.py  until.py  when.py
nornir_dsl/utils/: safe_evals.py
tests/: python_import.py  test_nornir_dsl.py
tests/inventory/: config.yaml  hosts.yaml
tests/playbooks/: simple.yaml
