[tool.poetry]
name = "nornir_dsl"
version = "0.1.0"
description = "Nornir DSL extension"
authors = ["Patrick <patrickdaj@gmail.com>"]

[tool.poetry.scripts]
nornir-cli = "nornir_dsl.cli:cli"

[tool.poetry.dependencies]
python = "^3.6"
nornir = "^3.0.0"
click = "^7.1.2"
nornir-utils = "^0.1.0"
nornir-napalm = "^0.1.1"
nornir-jinja2 = "^0.1.0"
nornir-netmiko = "^0.1.1"
wrapt = "^1.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
ipdb = "^0.13.4"
black = "^20.8b1"
mypy = "^0.790"
pylama = "^7.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
